--- a/project/src/index.css
+++ b/project/src/index.css
@@ -11,3 +11,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1
+{
+padding-top: 8px;
+text-align: center;
+font-weight: bold;
+}
+
+p
+{
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.bg-dark
+{
+  background-image: linear-gradient(to right, gray, lightgray);
+}
+
+.nav-link
+{
+  font-weight: bold;
+}
