--- a/project/src/index.css
+++ b/project/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(50deg, #313131, #525252);
 }
 
 code {
@@ -12,25 +13,23 @@ code {
     monospace;
 }
 
-h1
-{
-padding-top: 8px;
-text-align: center;
-font-weight: bold;
+h1 {
+  padding-top: 16px;
+  text-align: center;
+  font-weight: bold;
 }
 
-p
-{
+p {
   text-align: center;
   font-size: 1.5rem;
 }
 
-.bg-dark
-{
-  background-image: linear-gradient(to right, gray, lightgray);
+.bg-dark {
+  background-image: linear-gradient(to right,black, gray, lightgray);
 }
 
-.nav-link
+.nav-link, .navbar-brand
 {
+  color: white !important;
   font-weight: bold;
 }
