- Added icons to landing - Added responsive options - Modified PC components, now is a react component - Made images (img) folder public - Changed Icon - Some style changes

--- a/project/src/Components/chatbot/chat-bot-bubble.scss
+++ b/project/src/Components/chatbot/chat-bot-bubble.scss
@@ -8,3 +8,11 @@
 {
   background-color: #282c34ff;
 }
+
+@media screen and (max-width:800px)
+{
+  .rcw-widget-container
+  {
+    height: auto;
+  }
+}
