--- a/project/src/index.css
+++ b/project/src/index.css
@@ -1,4 +1,5 @@
 body {
+  width: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,6 +7,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(50deg, #313131, #525252);
+  background-repeat: repeat;
+  background-size: 100%;
 }
 
 code {
