--- a/project/src/styles/pc.css
+++ b/project/src/styles/pc.css
@@ -1,25 +1,41 @@
-.pcBody
-{
+.pcBody {
     color: whitesmoke;
 }
 
-.iconAuthor
-{
+.iconAuthor {
     color: whitesmoke;
+    text-align: center;
 }
 
-.icons ul p
-{
+.icons ul p {
     display: inline-table;
 }
 
-.icons img
+.part_name
 {
+    margin-bottom: 3px;
+}
+
+.desc {
+    display: table-cell;
+    line-height: 1;
+    font-size: 1em;
+    width: 400px;
+    vertical-align: middle;
+    position: relative;
+    padding: 2px;
+}
+
+.icons ul:hover {
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.521);
+}
+
+.icons img {
     filter: invert();
     padding-right: 20px;
 }
 
-.icons p
-{
+.icons p {
     text-align: left;
 }
